# faex-experiments

./: .gitignore  Cargo.toml  benchmarks.json  run_benchmarks.sh
sdsl/: Makefile  benchmarks.cpp  main.cpp  wt.cpp
src/: main.rs
visualization/: benchmarks.py  generate_figures.py
