[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faex = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"


[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"

